<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical"
        tools:context=".view.ShoeDetailFragment">

        <TextView
            android:id="@+id/name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            style="@style/form_label_text"/>

        <EditText
            android:id="@+id/name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/name"
            android:inputType="text"
            android:text="@{shoe.name}"
            style="@style/form_edit_text"/>

        <TextView
            android:id="@+id/company_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/company"
            style="@style/form_label_text"/>

        <EditText
            android:id="@+id/company_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/company"
            android:inputType="text"
            android:text="@{shoe.company}"
            style="@style/form_edit_text"/>

        <TextView
            android:id="@+id/shoe_size_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shoe_size"
            style="@style/form_label_text"/>

        <EditText
            android:id="@+id/shoe_size_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/shoe_size"
            android:inputType="numberDecimal"
            android:text="@{Double.toString(shoe.size)}"
            style="@style/form_edit_text"/>

        <TextView
            android:id="@+id/description_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            style="@style/form_label_text"/>

        <EditText
            android:id="@+id/description_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textPersonName"
            android:text="@{shoe.description}"
            style="@style/form_edit_text"/>

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/save"
            android:background="@drawable/positive_action_button_background"
            style="@style/base_button"/>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel"
            android:background="@drawable/negative_action_button_background"
            android:layout_marginTop="8dp"
            style="@style/base_button"/>

    </LinearLayout>
</layout>
